// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFF" _accessKey="V" 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext" _value="#FFF">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field-- kol-form-field--error kol-input-color">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          Label
          <span aria-hidden="true" class="access-key-hint">
            V
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--error">
          <div class="kol-input-container__container">
            <input accesskey="V" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--error" id="id-nonce" name="field" slot="input" type="color" value="#FFF">
          </div>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFF" _alert=true 1`] = `
<kol-input-color _alert="" _placeholder="Hier steht ein Platzhaltertext" _value="#FFF">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field-- kol-form-field--error kol-input-color">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--error">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--error" id="id-nonce" name="field" slot="input" type="color" value="#FFF">
          </div>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFF" _disabled=true 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext" _value="#FFF">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field-- kol-form-field--disabled kol-form-field--error kol-input-color">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--disabled kol-input-container--error">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--disabled kol-input--error" disabled="" id="id-nonce" name="field" slot="input" type="color" value="#FFF">
          </div>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFF" _hint="Hint" 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext" _value="#FFF">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field-- kol-form-field--error kol-input-color">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--error">
          <div class="kol-input-container__container">
            <input aria-describedby="id-nonce-hint" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--error" id="id-nonce" name="field" slot="input" type="color" value="#FFF">
          </div>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
      <span class="kol-form-field__hint" id="id-nonce-hint">
        Hint
      </span>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFF" _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext" _value="#FFF">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field-- kol-form-field--error kol-input-color">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--error">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <kol-icon _icons="codicon codicon-codicon codicon-arrow-left" _label=""></kol-icon>
          </div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--error" id="id-nonce" name="field" slot="input" type="color" value="#FFF">
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <kol-icon _icons="codicon codicon-codicon codicon-arrow-right" _label=""></kol-icon>
          </div>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFF" _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext" _value="#FFF">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field-- kol-form-field--error kol-input-color">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--error">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <kol-icon _icons="codicon codicon-codicon codicon-arrow-left" _label=""></kol-icon>
          </div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--error" id="id-nonce" name="field" slot="input" type="color" value="#FFF">
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end"></div>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFF" _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext" _value="#FFF">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field-- kol-form-field--error kol-input-color">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--error">
          <div class="kol-input-container__adornment kol-input-container__adornment--start"></div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--error" id="id-nonce" name="field" slot="input" type="color" value="#FFF">
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <kol-icon _icons="codicon codicon-codicon codicon-arrow-right" _label=""></kol-icon>
          </div>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFF" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideMsg=true 1`] = `
<kol-input-color _hide-msg="" _placeholder="Hier steht ein Platzhaltertext" _value="#FFF">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field-- kol-form-field--error kol-form-field--hidden-msg kol-input-color">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--error">
          <div class="kol-input-container__container">
            <input aria-describedby="id-nonce-msg" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--error" id="id-nonce" name="field" slot="input" type="color" value="#FFF">
          </div>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg visually-hidden" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFF" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext" _value="#FFF">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field-- kol-form-field--error kol-input-color">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--error">
          <div class="kol-input-container__container">
            <input aria-describedby="id-nonce-msg" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--error" id="id-nonce" name="field" slot="input" type="color" value="#FFF">
          </div>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFF" _readOnly=true 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext" _readonly="" _value="#FFF">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field-- kol-form-field--error kol-input-color">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--error">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--error" id="id-nonce" name="field" slot="input" type="color" value="#FFF">
          </div>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFF" _shortKey="S" 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext" _value="#FFF">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field-- kol-form-field--error kol-input-color">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          Label
          <span aria-hidden="true" class="access-key-hint">
            S
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--error">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--error" id="id-nonce" name="field" slot="input" type="color" value="#FFF">
          </div>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFF" _smartButton={"_icons":["codicon codicon-eye"],"_hideLabel":true,"_label":"einblenden"} 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext" _value="#FFF">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field-- kol-form-field--error kol-input-color">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--error">
          <div class="kol-input-container__adornment kol-input-container__adornment--start"></div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--error" id="id-nonce" name="field" slot="input" type="color" value="#FFF">
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <kol-button-wc _hidelabel="" _label="einblenden" tabindex="0"></kol-button-wc>
          </div>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFF" _suggestions=["#F00","#0F0","#00F"] _accessKey="V" 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext" _value="#FFF">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field-- kol-form-field--error kol-input-color">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          Label
          <span aria-hidden="true" class="access-key-hint">
            V
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--error">
          <div class="kol-input-container__container">
            <input accesskey="V" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--error" id="id-nonce" list="id-nonce-list" name="field" slot="input" type="color" value="#FFF">
            <datalist id="id-nonce-list">
              <option value="#F00"></option>
              <option value="#0F0"></option>
              <option value="#00F"></option>
            </datalist>
          </div>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFF" _suggestions=["#F00","#0F0","#00F"] _alert=true 1`] = `
<kol-input-color _alert="" _placeholder="Hier steht ein Platzhaltertext" _value="#FFF">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field-- kol-form-field--error kol-input-color">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--error">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--error" id="id-nonce" list="id-nonce-list" name="field" slot="input" type="color" value="#FFF">
            <datalist id="id-nonce-list">
              <option value="#F00"></option>
              <option value="#0F0"></option>
              <option value="#00F"></option>
            </datalist>
          </div>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFF" _suggestions=["#F00","#0F0","#00F"] _disabled=true 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext" _value="#FFF">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field-- kol-form-field--disabled kol-form-field--error kol-input-color">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--disabled kol-input-container--error">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--disabled kol-input--error" disabled="" id="id-nonce" list="id-nonce-list" name="field" slot="input" type="color" value="#FFF">
            <datalist id="id-nonce-list">
              <option value="#F00"></option>
              <option value="#0F0"></option>
              <option value="#00F"></option>
            </datalist>
          </div>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFF" _suggestions=["#F00","#0F0","#00F"] _hint="Hint" 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext" _value="#FFF">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field-- kol-form-field--error kol-input-color">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--error">
          <div class="kol-input-container__container">
            <input aria-describedby="id-nonce-hint" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--error" id="id-nonce" list="id-nonce-list" name="field" slot="input" type="color" value="#FFF">
            <datalist id="id-nonce-list">
              <option value="#F00"></option>
              <option value="#0F0"></option>
              <option value="#00F"></option>
            </datalist>
          </div>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
      <span class="kol-form-field__hint" id="id-nonce-hint">
        Hint
      </span>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFF" _suggestions=["#F00","#0F0","#00F"] _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext" _value="#FFF">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field-- kol-form-field--error kol-input-color">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--error">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <kol-icon _icons="codicon codicon-codicon codicon-arrow-left" _label=""></kol-icon>
          </div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--error" id="id-nonce" list="id-nonce-list" name="field" slot="input" type="color" value="#FFF">
            <datalist id="id-nonce-list">
              <option value="#F00"></option>
              <option value="#0F0"></option>
              <option value="#00F"></option>
            </datalist>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <kol-icon _icons="codicon codicon-codicon codicon-arrow-right" _label=""></kol-icon>
          </div>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFF" _suggestions=["#F00","#0F0","#00F"] _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext" _value="#FFF">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field-- kol-form-field--error kol-input-color">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--error">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <kol-icon _icons="codicon codicon-codicon codicon-arrow-left" _label=""></kol-icon>
          </div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--error" id="id-nonce" list="id-nonce-list" name="field" slot="input" type="color" value="#FFF">
            <datalist id="id-nonce-list">
              <option value="#F00"></option>
              <option value="#0F0"></option>
              <option value="#00F"></option>
            </datalist>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end"></div>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFF" _suggestions=["#F00","#0F0","#00F"] _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext" _value="#FFF">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field-- kol-form-field--error kol-input-color">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--error">
          <div class="kol-input-container__adornment kol-input-container__adornment--start"></div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--error" id="id-nonce" list="id-nonce-list" name="field" slot="input" type="color" value="#FFF">
            <datalist id="id-nonce-list">
              <option value="#F00"></option>
              <option value="#0F0"></option>
              <option value="#00F"></option>
            </datalist>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <kol-icon _icons="codicon codicon-codicon codicon-arrow-right" _label=""></kol-icon>
          </div>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFF" _suggestions=["#F00","#0F0","#00F"] _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideMsg=true 1`] = `
<kol-input-color _hide-msg="" _placeholder="Hier steht ein Platzhaltertext" _value="#FFF">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field-- kol-form-field--error kol-form-field--hidden-msg kol-input-color">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--error">
          <div class="kol-input-container__container">
            <input aria-describedby="id-nonce-msg" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--error" id="id-nonce" list="id-nonce-list" name="field" slot="input" type="color" value="#FFF">
            <datalist id="id-nonce-list">
              <option value="#F00"></option>
              <option value="#0F0"></option>
              <option value="#00F"></option>
            </datalist>
          </div>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg visually-hidden" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFF" _suggestions=["#F00","#0F0","#00F"] _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext" _value="#FFF">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field-- kol-form-field--error kol-input-color">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--error">
          <div class="kol-input-container__container">
            <input aria-describedby="id-nonce-msg" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--error" id="id-nonce" list="id-nonce-list" name="field" slot="input" type="color" value="#FFF">
            <datalist id="id-nonce-list">
              <option value="#F00"></option>
              <option value="#0F0"></option>
              <option value="#00F"></option>
            </datalist>
          </div>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFF" _suggestions=["#F00","#0F0","#00F"] _readOnly=true 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext" _readonly="" _value="#FFF">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field-- kol-form-field--error kol-input-color">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--error">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--error" id="id-nonce" list="id-nonce-list" name="field" slot="input" type="color" value="#FFF">
            <datalist id="id-nonce-list">
              <option value="#F00"></option>
              <option value="#0F0"></option>
              <option value="#00F"></option>
            </datalist>
          </div>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFF" _suggestions=["#F00","#0F0","#00F"] _shortKey="S" 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext" _value="#FFF">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field-- kol-form-field--error kol-input-color">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          Label
          <span aria-hidden="true" class="access-key-hint">
            S
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--error">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--error" id="id-nonce" list="id-nonce-list" name="field" slot="input" type="color" value="#FFF">
            <datalist id="id-nonce-list">
              <option value="#F00"></option>
              <option value="#0F0"></option>
              <option value="#00F"></option>
            </datalist>
          </div>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFF" _suggestions=["#F00","#0F0","#00F"] _smartButton={"_icons":["codicon codicon-eye"],"_hideLabel":true,"_label":"einblenden"} 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext" _value="#FFF">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field-- kol-form-field--error kol-input-color">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--error">
          <div class="kol-input-container__adornment kol-input-container__adornment--start"></div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--error" id="id-nonce" list="id-nonce-list" name="field" slot="input" type="color" value="#FFF">
            <datalist id="id-nonce-list">
              <option value="#F00"></option>
              <option value="#0F0"></option>
              <option value="#00F"></option>
            </datalist>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <kol-button-wc _hidelabel="" _label="einblenden" tabindex="0"></kol-button-wc>
          </div>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFF" _suggestions=["#F00","#0F0","#00F"] _touched=true 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext" _touched="" _value="#FFF">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field-- kol-form-field--error kol-form-field--touched kol-input-color">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--error">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--error kol-input--touched" id="id-nonce" list="id-nonce-list" name="field" slot="input" type="color" value="#FFF">
            <datalist id="id-nonce-list">
              <option value="#F00"></option>
              <option value="#0F0"></option>
              <option value="#00F"></option>
            </datalist>
          </div>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg" role="alert">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFF" _suggestions=["#F00","#0F0","#00F"] 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext" _value="#FFF">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field-- kol-form-field--error kol-input-color">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--error">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--error" id="id-nonce" list="id-nonce-list" name="field" slot="input" type="color" value="#FFF">
            <datalist id="id-nonce-list">
              <option value="#F00"></option>
              <option value="#0F0"></option>
              <option value="#00F"></option>
            </datalist>
          </div>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFF" _touched=true 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext" _touched="" _value="#FFF">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field-- kol-form-field--error kol-form-field--touched kol-input-color">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--error">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--error kol-input--touched" id="id-nonce" name="field" slot="input" type="color" value="#FFF">
          </div>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg" role="alert">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFF" 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext" _value="#FFF">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field-- kol-form-field--error kol-input-color">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--error">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--error" id="id-nonce" name="field" slot="input" type="color" value="#FFF">
          </div>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;
